Add navigation for exploring by medium
Added navigation for exploring by medium, including links to artwork, audio, and narrative.

--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
     </ul>
   </nav>
 
+  <nav>
+    <h1>Explore by medium</h1>
+    <ul>
+      <li><a href="artwork.html">View Artwork</a></li>
+      <li><a href="audio.html">View Audio and OST</a></li>
+      <li><a href="narrative.html">View Narrative & Story</a></li>
+    </ul>
+  </nav>
+
   <!-- PHILOSOPHY / PROCESS (SECONDARY) -->
   <section>
     <h2>How I work</h2>
@@ -50,3 +59,4 @@
 
 </body>
 </html>
+
