Enhance artwork.html with new media sections
Updated the artwork.html file to include additional sections, footer navigation.

--- a/artwork.html
+++ b/artwork.html
@@ -238,8 +238,15 @@ document.addEventListener('mousedown', (e) => {
 </script>
 
 <footer>
-  <p><a href="projects.html">Back to Projects</a></p>
   <p><a href="index.html">Home</a></p>
+  <p><a href="projects.html">Projects</a></p>
+  <nav>
+  <h1>Explore by medium</h1>
+  <ul>
+  <li><a href="audio.html">View Audio and OST</a></li>
+  <li><a href="narrative.html">View Narrative & Story</a></li>
+  </ul>
+  </nav>
 <p>
   Built and maintained by El Leiva · 
   <a href="https://github.com/yourusername/your-repo" target="_blank">Source on GitHub</a>
@@ -248,3 +255,4 @@ document.addEventListener('mousedown', (e) => {
 
 </body>
 </html>
+
