Added navigation to the footer

--- a/audio.html
+++ b/audio.html
@@ -593,6 +593,13 @@ document.addEventListener('mousedown', (e) => {
     <footer>
       <p><a href="projects.html">Back to projects</a></p>
       <p><a href="index.html">Home</a></p>
+      <nav>
+      <h1>Explore by medium</h1>
+      <ul>
+      <li><a href="artwork.html">View Artwork</a></li>
+      <li><a href="narrative.html">View Narrative & Story</a></li>
+      </ul>
+  </nav>
     <p>
       Built and maintained by El Leiva · 
       <a href="https://github.com/yourusername/your-repo" target="_blank">Source on GitHub</a>
@@ -601,3 +608,4 @@ document.addEventListener('mousedown', (e) => {
 
 </body>
 </html>
+
