Revise narrative.html for improved layout and content
Updated the narrative.html file to include additional content and structure, enhancing the layout and functionality of the narrative section.

--- a/narrative.html
+++ b/narrative.html
@@ -248,6 +248,12 @@ document.addEventListener('mousedown', (e) => {
 <footer>
   <p><a href="projects.html">Back to projects</a></p>
   <p><a href="index.html">Home</a></p>
+  <h1>Explore by medium</h1>
+    <ul>
+      <li><a href="artwork.html">View Artwork</a></li>
+      <li><a href="audio.html">View Audio and OST</a></li>
+    </ul>
+  </nav>
     <p>
       Built and maintained by El Leiva · 
       <a href="https://github.com/yourusername/your-repo" target="_blank">Source on GitHub</a>
@@ -256,4 +262,5 @@ document.addEventListener('mousedown', (e) => {
 
 </body>
 </html>
+
 
