Enhance footer with medium navigation links for projects.html
Updated footer to include navigation links by medium.

--- a/projects.html
+++ b/projects.html
@@ -229,7 +229,14 @@ document.addEventListener('mousedown', (e) => {
   </section> -->
 
 <footer>
-    <p><a href="index.html">Back to home</a></p>
+    <p><a href="index.html">Home</a></p>
+    <h1>Explore by medium</h1>
+    <ul>
+      <li><a href="artwork.html">View Artwork</a></li>
+      <li><a href="audio.html">View Audio and OST</a></li>
+      <li><a href="narrative.html">View Narrative & Story</a></li>
+    </ul>
+  </nav>
     <p>
       Built and maintained by El Leiva · 
       <a href="https://github.com/yourusername/your-repo" target="_blank">Source on GitHub</a>
@@ -238,3 +245,4 @@ document.addEventListener('mousedown', (e) => {
 
 </body>
 </html>
+
