updated games.html for improved structure and links
Updated game-related sections and modal functionality.

--- a/games.html
+++ b/games.html
@@ -114,11 +114,11 @@
   <p>Short description of what the game is and what the player does, No vibes, no lore.</p>
 
   <button class="play-button"
-    onclick="toggleExpand(this, 'prototype-more')">
+    onclick="toggleExpand(this, 'game-more')">
     ▶ View More
   </button>
 
-  <div id="prototype-more" class="expandable">
+  <div id="game-more" class="expandable">
     <div class="inner-grid">
       <div>
         <h3>Related Links</h3>
@@ -260,15 +260,24 @@ document.addEventListener('mousedown', (e) => {
 </script>
 
 <footer>
-    <p><a href="index.html">Back to home</a></p>
-    <p>
+    <p><a href="index.html">Home</a></p>
+    <p><a href="index.html">Home</a></p>
+  <h1>Explore by medium</h1>
+    <ul>
+      <li><a href="artwork.html">View Artwork</a></li>
+      <li><a href="audio.html">View Audio and OST</a></li>
+      <li><a href="narrative.html">View Narrative & Story</a></li>
+    </ul>
+  </nav>
+      <p>
       Built and maintained by El Leiva · 
-      <a href="https://github.com/yourusername/your-repo" target="_blank">Source on GitHub</a>
+      <a href="https://github.com/ElLeiva/el-leiva-portfolio" target="_blank">Source on GitHub</a>
     </p>
   </footer>
 
 </body>
 </html>
+
 
 
 
