Enhance about.html for responsiveness and clarity
Added viewport meta tag for responsive design and updated footer link text.

--- a/about.html
+++ b/about.html
@@ -2,15 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>El Leiva — About</title>
   <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
 <body>
 
+<header>
   <h1>About</h1>
+</header>
 
-  <!-- FOCUS -->
+<!-- FOCUS -->
   <p>
     I make games that evoke emotion through simple mechanics and a strong,
     cohesive atmosphere.
@@ -38,8 +41,8 @@
 
   <p><a href="resume.html">My resume</a></p>
 
-    <footer>
-    <p><a href="index.html">Back to home</a></p>
+  <footer>
+    <p><a href="index.html">Home</a></p>
     <p>
       Built and maintained by El Leiva · 
       <a href="https://github.com/ElLeiva/el-leiva-portfolio" target="_blank">Source on GitHub</a>
@@ -48,5 +51,6 @@
 
 </body>
 </html>
+
 
 
