Enhance resume with projects and experience details
Added projects and experience sections to the resume.

--- a/resume.html
+++ b/resume.html
@@ -72,6 +72,60 @@
     </div>
   </article>
 
+  <article>
+    <div class="modal-scroll">
+      <h2>Projects</h2>
+      <button class="play-button" onclick="toggleExpand(this, 'projects-more')">
+        ▶ View More
+      </button>
+      <div id="projects-more" class="expandable">
+        <div class="inner-grid">
+          <p>
+      Small games, prototypes, and tools.<br>
+      <a href="https://elleiva.github.io/el-leiva-portfolio/">See full portfolio</a>
+          </p>
+        </div>
+    </div>
+  </article>
+
+  <article>
+    <div class="modal-scroll">
+      <h2>Experience</h2>
+      <button class="play-button" onclick="toggleExpand(this, 'experience-more')">
+        ▶ View More
+      </button>
+      <div id="experience-more" class="expandable">
+        <div class="inner-grid">
+          <p><strong>Administrative Assistant (Remote)</strong><br>
+            App-based platform
+          </p>
+            <ul>
+              <li>Data handling and basic database tasks</li>
+              <li>Use of digital tools and internal systems</li>
+              <li>Remote communication and task organization</li>
+            </ul>
+        </div>
+    </div>
+  </article>
+
+    <article>
+    <div class="modal-scroll">
+      <h2>Background</h2>
+      <button class="play-button" onclick="toggleExpand(this, 'background-more')">
+        ▶ View More
+      </button>
+      <div id="background-more" class="expandable">
+        <div class="inner-grid">
+          <ul>
+            <li>Argentine Mathematics Olympiad (participant)</li>
+            <li>Radio workshop (3 years – announcer)</li>
+            <li>Programming workshop (Python, JS, HTML)</li>
+            <li>First Aid (CPR & Heimlich)</li>
+          </ul>
+        </div>
+    </div>
+  </article>
+    
 </section>
 
 <script>
@@ -150,7 +204,8 @@ document.addEventListener('keydown', e => {
 
 <footer>
   <p><a href="contact.html">Contact</a></p>
-  <p>Built and maintained by El Leiva</p>
+  <p>Built and maintained by El Leiva · 
+      <a href="https://github.com/ElLeiva/el-leiva-portfolio" target="_blank">Source on GitHub</a></p>
 </footer>
 
 </body>
