--- a/resume.html
+++ b/resume.html
@@ -72,7 +72,7 @@
     </div>
   </article>
 
-  <article>
+  <article class="grid-item">
     <div class="modal-scroll">
       <h2>Projects</h2>
       <button class="play-button" onclick="toggleExpand(this, 'projects-more')">
@@ -88,7 +88,7 @@
     </div>
   </article>
 
-  <article>
+  <article class="grid-item">
     <div class="modal-scroll">
       <h2>Experience</h2>
       <button class="play-button" onclick="toggleExpand(this, 'experience-more')">
@@ -108,7 +108,7 @@
     </div>
   </article>
 
-    <article>
+    <article class="grid-item">
     <div class="modal-scroll">
       <h2>Background</h2>
       <button class="play-button" onclick="toggleExpand(this, 'background-more')">
