--- a/experimentation.html
+++ b/experimentation.html
@@ -253,6 +253,24 @@
   </div>
 </div>
 
+<article class="grid-item music-card" src="https://www.youtube.com/embed/p06sUOThzq8?si=8qzkpCkNuN3YtG_x"
+        allowfullscreen>
+  
+    <iframe class="main-track" ></iframe>
+
+    <button class="play-button">▶ View Variations</button>
+
+    <div class="expandable">
+      <div class="inner-grid">
+        <div class="modal-scroll">
+        <!-- Variations -->
+        <iframe src="https://www.youtube.com/embed/hJtCiyezIiQ?si=kDUuuy5NVNoBnTWX"></iframe> <!-- Lullaby -->
+        <iframe></iframe> <!-- Battle -->
+        <iframe></iframe> <!-- Ambient -->
+      </div>
+    </div>
+  </div>
+</article>
 
 
 
@@ -890,5 +908,6 @@ document.addEventListener('play', e => {
       <a href="https://github.com/yourusername/your-repo" target="_blank">Source on GitHub</a>
     </p>
   </footer>
+
 
 </body>
